namespace-envs.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: dev-ns
  labels:
    env: dev

---
apiVersion: v1
kind: Namespace
metadata:
  name: test-ns
  labels:
    env: test 

--- 
apiVersion: v1
kind: Namespace
metadata:
  name: prod-ns
  labels:
    env: prod
